Fix overflowing pre tags

--- a/php/master/assets/css-sg/style.css
+++ b/php/master/assets/css-sg/style.css
@@ -353,6 +353,7 @@ Used to section content and create hierarchy
   padding: 0.75em;
   border-top: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
 .new-zanata pre code {
